fixed layout problems and added semantic tags in place of div tags

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,7 @@
 /* Contains all content besides head. Only style addition is a background color. */
 body {
     background-color: #d9dcd6;
+    
 }
 
 /* Nav tag. Just sets font size and type. Also adds spacing on top and side from padding and margin.(makes navigation bar on header of page.) */
@@ -36,9 +37,11 @@ nav a {
     overflow: hidden;
 }
 
-/* This main section contains the seo, orm and smm content and limits its width. */
+/* This main section contains the seo, orm and smm content and limits its width. and sets the parameters for the flexbox */
 main {
-    width: 65%;
+    width: 70%;
+    display: inline-block;
+    margin-left: 0px;
 }
 
 /* This is all the paragraphs on the page. just like the img tag its set to fit in div depending on window size. */
@@ -88,7 +91,7 @@ header h1 .seo {
 }
 
 /* Controls seo section title's spacing and font size.*/
-.main div h2 {
+.main section h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
@@ -101,12 +104,15 @@ header h1 .seo {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
     color: #ffffff;
+    display: inline-block
 }
 
 /* Image for seo section !!Float not wokrking!! */
 .left img {
     float: left;
     margin: 10px auto;
+    height: 200px;
+    width: 300px;
 }
 
 /* sets the parameters for the Onlinr rep section giving its font color, family, spacing, and background color. */
@@ -117,26 +123,28 @@ header h1 .seo {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
     color: #ffffff;
+    display: inline-block;
 }
 
 /* controls image for Online rep section. !!Float not working!! */
 .right img {
     float: right;
     margin: 10px auto;
+    height: 200px;
+    width: 300px;
 }
 
 /*sets the parameters for the benefits section giving its font family, spacing, and background color. etc. */
 aside {
-    margin-right: 20px;
+    margin-right: 0px;
     padding: 20px;
     clear: both;
-    float: right;
     width: 27%;
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
     text-align: center;
-    display: inline-block;
+    float: right;
 }
 
 /*benefits spacing and font color (appears on bottom right of webpage.)*/
@@ -150,12 +158,6 @@ aside {
     margin-bottom: 10px;
     text-align: center;
     color: #ffffff;
-    display: flex;
-    justify-content: center;
-}
-
-/* the images alignment for the aside section.*/
-.benefitcss img {
     display: flex;
     justify-content: center;
 }
